--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
       <artifactId>freemarker</artifactId>
       <version>2.3.23</version>
     </dependency>
+    <dependency>
+      <groupId>com.xiaoleilu</groupId>
+      <artifactId>hutool-all</artifactId>
+      <version>3.0.9</version>
+    </dependency>
   </dependencies>
 </project>
